--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: var(--light-color);
@@ -84,7 +84,7 @@ ul {
 /* Landing Page */
 .main {
   position: relative;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
+  background: url("./img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
 }
 
@@ -182,5 +182,9 @@ ul {
 
   .header h1 {
     margin-bottom: 1rem;
+  }
+
+  .main-inner {
+    width: 100%;
   }
 }
