--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  /* font-family: 'Raleway', sans-serif; */
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: var(--light-color);
