--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Condensed:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Condensed:wght@300;400;700&display=swap");
 
 .toolbarContainer {
   display: flex;
@@ -28,7 +28,7 @@
   align-items: center;
   /* font-weight: bold; */
   /* font-family: 'Roboto Condensed', sans-serif; */
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
 }
 
 .toolbarBrandLogo {
@@ -59,6 +59,25 @@
 
 .toolbarIconWrapper:hover {
   background-color: darkblue;
+}
+
+.toolbarIconWrapper:hover .tooltiptext {
+  visibility: visible;
+}
+
+.toolbarIconWrapper .tooltiptext {
+  visibility: hidden;
+  font-size: 10px;
+  width: 64px;
+  background-color: darkblue;
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
 }
 
 .center {
@@ -95,25 +114,29 @@
 
 .toolbarAvatar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   cursor: pointer;
+  border-radius: 50%;
+  border: 1px solid white;
+  width: 30px;
+  height: 30px;
 }
 
 .toolbarAvatarImg {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
-  border: 1px solid green;
+  border: 2px solid green;
   object-fit: cover;
 }
 
 .toolbarAvatarImg:hover {
-  border: 1px solid darkgoldenrod;
+  border: 2px solid darkblue;
 }
 
 /* Mobile Styles */
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .toolbarContainer {
     flex-direction: column;
     justify-content: space-evenly;
