--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -43,9 +43,78 @@
   font-size: 20px !important;
 }
 
+.sidebarFriend {
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+
+  /* display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  cursor: pointer; */
+}
+
+.sidebarFriend.active,
+.sidebarFriend:hover {
+  background-color: rgb(240, 240, 255);
+}
+
+.sidebarProfileImgContainer {
+  margin-right: 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.sidebarProfileImg {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid black;
+}
+
+.sidebarOnline {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: limegreen;
+  position: absolute;
+  top: -2px;
+  right: 0;
+  border: 2px solid white;
+}
+
+.sidebarUsername {
+  font-weight: 500;
+  font-size: 15px !important;
+}
+
+.sidebarAvatar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 1px solid white;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.sidebarAvatarImg {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 1px solid green;
+  object-fit: cover;
+}
+
 /* Mobile Styles */
-@media (max-width: 1022px) {
+/* @media (max-width: 1022px) {
   .sidebar {
     display: none;
   }
-}
+} */
