--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,7 +1,8 @@
 .sidebar {
-  flex: 1/5;
+  flex: 3;
   height: calc(100vh - 50px);
   background-color: rgb(251, 251, 255);
+  overflow-y: scroll;
   position: sticky;
   top: 50px;
 }
@@ -113,8 +114,8 @@
 }
 
 /* Mobile Styles */
-/* @media (max-width: 1022px) {
+@media (max-width: 1022px) {
   .sidebar {
     display: none;
   }
-} */
+}
