--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Condensed:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Condensed:wght@300;400;700&display=swap");
 
 .toolbarContainer {
   display: flex;
   width: 100%;
   height: 40px;
   padding: 0px 20px;
-  border-bottom: 1px solid black;
+  /* border: 4px solid black; */
   color: #fff;
   background-color: #045db6;
   justify-content: space-between;
@@ -28,7 +28,7 @@
   align-items: center;
   /* font-weight: bold; */
   /* font-family: 'Roboto Condensed', sans-serif; */
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
 }
 
 .toolbarBrandLogo {
@@ -136,10 +136,10 @@
 }
 
 /* Mobile Styles */
-@media (max-width: 768px) {
+@media (max-width: 1022px) {
   .toolbarContainer {
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     height: 100px;
   }
   .toolbarIcons {
