--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -90,7 +90,6 @@
   border-radius: 5px;
   background-color: green;
   font-weight: 500;
-  margin-right: 20px;
   cursor: pointer;
   color: white;
 }
@@ -111,4 +110,11 @@
   right: 20px;
   cursor: pointer;
   opacity: 0.7;
+}
+
+/* Mobile Styles */
+@media (max-width: 767px) {
+  .shareOptionText {
+    display: none;
+  }
 }
